made menu updates

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Loft Restuarant and Bar</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700|Great+Vibes"' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="temp/styles/main.css">
     <script src="temp/scripts/Vendor.js" charset="utf-8"></script>
   </head>
@@ -193,7 +193,7 @@
 
     <div class="menu--row-three__option-two">
       <h3>Caribé Stuffed Baked Chicken</h3>
-      <p>IStuffed with herbs and a hint of our jerk mix. ‘dis will ‘mek yu lik yu plate!’ a succulent juicy taste in every bite!.</p>
+      <p>Stuffed with herbs and a hint of our jerk mix. ‘dis will ‘mek yu lik yu plate!’ a succulent juicy taste in every bite!.</p>
     </div>
     <div class="menu--row-three__option-two__price">
       <h2>&pound;13.5</h2>
@@ -202,16 +202,91 @@
   </div>
 
 
-  <div class="menu--row-three">
-    <div class="menu--row-three__option-one">
+  <div class="menu--row-four">
+    <div class="menu--row-four__option-one">
       <h3>Caribé Oxtail</h3>
-      <p>Caribé Oxtail marinated in Island spices, herbs & slow cooked until very, very tender and succulent</p>
+      <p>Caribé Oxtail marinated in Island spices, herbs &amp; slow cooked until very, very tender and succulent</p>
     </div>
-    <div class="menu--row-three__option-one__price">
+    <div class="menu--row-four__option-one__price">
       <h2>&pound;14</h2>
     </div>
 
   </div>
+
+<!-- Deserts -->
+  <div class="menu__menu-box__sub--header">
+    <h2>Desserts</h2>
+  </div>
+
+  <div class="menu--row-one">
+    <div class="menu--row-one__option-one">
+      <h3>Fruit Cocktail </h3>
+      <p>A fresh crunchy medley of fruits to clear your palate for a ‘loungey’ drink after.</p>
+    </div>
+    <div class="menu--row-one__option-one__price">
+      <h2>&pound;3.5</h2>
+    </div>
+
+    <div class="menu--row-one__option-two">
+      <h3>Ice-cream Trio</h3>
+      <p>Mint, Vanilla &amp; Strawberry.</p>
+    </div>
+    <div class="menu--row-one__option-two__price">
+      <h2>&pound;3.5</h2>
+    </div>
+
+  </div>
+
+  <div class="menu--row-two">
+    <div class="menu--row-two__option-one">
+      <h3>Island Ice-cream</h3>
+      <p>Try our famous Rum &amp; raisin ice-cream</p>
+    </div>
+    <div class="menu--row-two__option-one__price">
+      <h2>&pound;5.5</h2>
+    </div>
+
+    <div class="menu--row-two__option-two">
+      <h3>Jamaican Ginger Cake with cheese</h3>
+      <p>For some, this is the most unexpected combination! Don’t judge if you haven’t tried it!  It nuh get betta dan dat!</p>
+    </div>
+    <div class="menu--row-two__option-two__price">
+      <h2>&pound;5</h2>
+    </div>
+
+  </div>
+
+  <div class="menu--row-three">
+    <div class="menu--row-three__option-one">
+      <h3>Caribé Chilli Chocolate Cake</h3>
+      <p>Expertly baked and super tastey with a hint of scotch bonnet (though not hot as it sounds!)</p>
+    </div>
+    <div class="menu--row-three__option-one__price">
+      <h2>&pound;4.5</h2>
+    </div>
+
+    <div class="menu--row-three__option-two">
+      <h3>Caribé Fruit Cake</h3>
+      <p>Made with a selection of liquidised fruits and finsihed to a tasty ‘more-ish’ crave!</p>
+    </div>
+    <div class="menu--row-three__option-two__price">
+      <h2>&pound;4.5</h2>
+    </div>
+
+  </div>
+
+
+  <div class="menu--row-four">
+    <div class="menu--row-four__option-one">
+      <h3>Caribé Rum Cake</h3>
+      <p>Yes, it’s moist, tasty and not for the simpletons! It’s definitely more-ish! You caan hav’ enuf of dis!</p>
+    </div>
+    <div class="menu--row-four__option-one__price">
+      <h2>&pound;14</h2>
+    </div>
+
+  </div>
+
 
 
 </div>
