--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
   <div class="specialities-grid-box">
     <div class="specialities-grid">
       <h2>Sharing Platter – Serves 2-4 or 6-8</h2>
-      <p>Waan fi taste a bit of everyting? Sharing is di ansa. Festivals (Jamaican cornbread fritters); Fried plantain (like a banana Daddy); Caribé Meatballs; chicken wings & Tilapia fish.</p>
+      <p>Waan fi taste a bit of everyting? Sharing is di ansa. Festivals (Jamaican cornbread fritters); Fried plantain (like a banana Daddy); Caribé Meatballs; chicken wings &amp;Tilapia fish.</p>
       <p>from £15.00</p>
     </div>
     <div class="specialities-grid">
@@ -101,7 +101,7 @@
     </div>
     <div class="specialities-grid">
       <h2>Soup of the day</h2>
-      <p>Taste the Islands and warm the soul. It might be Jamaican Pepper Pot or Sweet potato & Coconut or spicy mutton soup.</p>
+      <p>Taste the Islands and warm the soul. It might be Jamaican Pepper Pot or Sweet potato &amp;Coconut or spicy mutton soup.</p>
     </div>
     <div class="specialities-grid">
       <img src="assets/images/lauren-lester-205921.jpg" alt="soup">
@@ -125,6 +125,7 @@
   <footer></footer>
 
 </section>
+
 
     <!-- End of Specialities Section -->
 
@@ -155,7 +156,7 @@
 
     <div class="menu--row-one__option-two">
       <h3>Caribé Combo Trio</h3>
-      <p>It's full of flavours and it’s the best of three Worlds – Oxtail, curried mutton & fish.</p>
+      <p>It's full of flavours and it’s the best of three Worlds – Oxtail, curried mutton &amp;fish.</p>
     </div>
     <div class="menu--row-one__option-two__price">
       <h2>&pound;17</h2>
@@ -166,7 +167,7 @@
   <div class="menu--row-two">
     <div class="menu--row-two__option-one">
       <h3>Caribé Oxtail</h3>
-      <p>Caribé Oxtail marinated in Island spices, herbs & slow cooked until very, very tender and succulent</p>
+      <p>Caribé Oxtail marinated in Island spices, herbs &amp;slow cooked until very, very tender and succulent</p>
     </div>
     <div class="menu--row-two__option-one__price">
       <h2>&pound;14</h2>
@@ -185,7 +186,7 @@
   <div class="menu--row-three">
     <div class="menu--row-three__option-one">
       <h3>Caribé Oxtail</h3>
-      <p>Caribé Oxtail marinated in Island spices, herbs & slow cooked until very, very tender and succulent</p>
+      <p>Caribé Oxtail marinated in Island spices, herbs &amp;slow cooked until very, very tender and succulent</p>
     </div>
     <div class="menu--row-three__option-one__price">
       <h2>&pound;14</h2>
@@ -282,7 +283,7 @@
       <p>Yes, it’s moist, tasty and not for the simpletons! It’s definitely more-ish! You caan hav’ enuf of dis!</p>
     </div>
     <div class="menu--row-four__option-one__price">
-      <h2>&pound;14</h2>
+      <h2>&pound;5.5</h2>
     </div>
 
   </div>
